// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Layout renders in dark mode 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-b1a79c"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiCard-root css-1gid1ep-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiBox-root css-jbbmo6"
      >
        <button
          aria-label="dark-mode-toggle"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeLarge css-v52rcf-MuiButtonBase-root-MuiIconButton-root"
          data-testid="header-theme-toggle-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="WbSunnyIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m6.76 4.84-1.8-1.79-1.41 1.41 1.79 1.79 1.42-1.41zM4 10.5H1v2h3v-2zm9-9.95h-2V3.5h2V.55zm7.45 3.91-1.41-1.41-1.79 1.79 1.41 1.41 1.79-1.79zm-3.21 13.7 1.79 1.8 1.41-1.41-1.8-1.79-1.4 1.4zM20 10.5v2h3v-2h-3zm-8-5c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm-1 16.95h2V19.5h-2v2.95zm-7.45-3.91 1.41 1.41 1.79-1.8-1.41-1.41-1.79 1.8z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <div>
        Content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Auth Layout renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1b96vmi"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiCard-root css-ptl33d-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiBox-root css-jbbmo6"
      >
        <button
          aria-label="dark-mode-toggle"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeLarge css-1pz7awu-MuiButtonBase-root-MuiIconButton-root"
          data-testid="header-theme-toggle-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="Brightness3Icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 2c-1.05 0-2.05.16-3 .46 4.06 1.27 7 5.06 7 9.54 0 4.48-2.94 8.27-7 9.54.95.3 1.95.46 3 .46 5.52 0 10-4.48 10-10S14.52 2 9 2z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <div>
        Content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
